[package]
name = "pie"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["multipart", "macros"] }
tokio = { version = "1.47.1", features = [ "full" ] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
hyper = "1.7.0"
shuttle-axum = { version = "0.57.0", optional = true }
shuttle-runtime = { version = "0.57.0", optional = true }
dotenvy = "0.15.7"
sqlx = { version = "0.8.6", features = [ "runtime-tokio-rustls", "postgres", "chrono", "macros" ] }
tower_governor = "0.8.0"
tower = { version = "0.5.2", features = [ "full" ] }
tower-http = { version = "0.6.6", features = [ "trace", "cors", "compression-zstd", "compression-gzip", "limit", "request-id", "timeout", "metrics", "validate-request", "auth" ] }   # for TraceLayer (and CORS if you add it)
tracing-subscriber = { version = "0.3.20", features = [ "env-filter" ] }
tracing = "0.1.41"
chrono = { version = "0.4.42", features = [ "serde" ] }
argon2 = { version = "0.5.3", features = [ "password-hash" ] }
fancy-regex = "0.16.1"
rand_core = { version = "0.9.3", features = ["os_rng"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
uuid = "1.19.0"

[features]
default = []
shuttle = ["shuttle-runtime", "shuttle-axum"]
